added cartitem and completed css

--- a/frontend/src/Components/Product/Product.css
+++ b/frontend/src/Components/Product/Product.css
@@ -37,6 +37,7 @@
   padding: 8px 16px;
   border: 1px solid #171711;
   font-size: 1rem;
+  border-radius: 4px;
 }
 .info__button:hover{
   background: #171711;
